# kobuki-x360controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controller.yaml
launch/: test_robot.launch  view_robot.launch
meshes/: wheel.stl
rviz/: rviz.rviz
scripts/: kinematic_model.py  model_cinematic.py  xbox_controller.py
urdf/: kobuki.gv  robot.urdf
