<?xml version="1.0"?>
<package format="2">
  <name>kobuki_x360controller</name>
  <version>0.0.0</version>
  <description>Simulation of the kobuki robot in ROS-melodic and Gazebo 9, driven with an xbox 360 controller.</description>


  <maintainer email="cychitivav@unal.edu.co">Cristian Chitiva</maintainer>

  <license>MIT</license>
  
  <url type="github">https://github.com/cychitivav/kobuki_x360controller</url>
  
  <author email="cychitivav@unal.edu.co">Cristian Chitiva</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
